<resources>
    <string name="app_name">MyStoreApp</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="document">Documento</string>
    <string name="city">Ciudad</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo</string>
    <string name="accept_email">Enviarme ofertas al correo</string>
    <string name="action_form">Guardar</string>
    <string name="action_info">Salir</string>
</resources>
